<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.parassidhu.pdfpin.MainActivity"
    tools:showIn="@layout/activity_main">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <Button
                android:id="@+id/chooseBtn"
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@color/blue"
                android:elevation="8dp"
                android:fontFamily="@font/product_sans_regular"
                android:text="@string/choose_"
                android:textColor="@drawable/tab_white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/centerInfo" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/file_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/chooseBtn"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iconGroup" />

            <TextView
                android:id="@+id/centerInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/default_text"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:id="@+id/iconGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/file_list"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chooseBtn">

                <RadioGroup
                    android:id="@+id/radios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/blueIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="50dp"
                        android:layout_marginRight="50dp"
                        android:checked="true"
                        android:text="@string/blue"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/redIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/red"
                        android:textSize="16sp" />
                </RadioGroup>

                <Button
                    android:id="@+id/btnPDF1"
                    android:layout_width="84dp"
                    android:layout_height="84dp"
                    android:layout_below="@id/radios"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/pdf" />

                <Button
                    android:id="@+id/btnPDF2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/radios"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="12dp"
                    android:layout_toRightOf="@id/btnPDF1"
                    android:background="@drawable/pdf2" />

            </RelativeLayout>

            <Button
                android:id="@+id/pinFiles"
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/iconGroup"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorPrimary"
                android:elevation="5dp"
                android:fontFamily="@font/product_sans_regular"
                android:text="@string/pin"
                android:textColor="@drawable/tab_white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/file_list" />

            <TextView
                android:id="@+id/dev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="12dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/product_sans_regular"
                android:text="@string/developer"
                android:textAllCaps="true"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_pinned_shortcut_not_opening" />

            <Button
                android:id="@+id/btn_pinned_shortcut_not_opening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="Pinned Shortcut Not Opening?"
                android:background="@color/blue"
                android:elevation="5dp"
                android:visibility="invisible"
                android:fontFamily="@font/product_sans_regular"
                android:textColor="@drawable/tab_white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pinFiles" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_key" />
</LinearLayout>